# rust_ml

./: Cargo.toml  flake.nix
.cargo/: config.toml
examples/: nand.rs  twice.rs  xor.rs
src/: lib.rs  main.rs  nn.rs
