[package]
name = "rust_ml"
version = "0.1.0"
edition = "2024"
license = "MIT"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
anyhow = "1.0.100"
bevy = { version = "0.18", default-features = false, features = ["2d", "dev"] }
derive_more = { version = "2.0.1", features = ["add", "mul"] }
ndarray = { version = "0.17.1", features = ["matrixmultiply-threading"] }
ndarray-rand = "0.16.0"
num-traits = "0.2.19"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
debug = true

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
